--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
 </head>
 <body>
 	<h1>Discover hidden places in the world around you</h1>
+	<p><a href="" alt="">Download Excursion (Coming soon!)</a></p>
+	<video loop autoplay>
+		<source src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/videos/excursion.mp4" type="video/mp4">
+        Votre navigateur ne lit pas les MP4
+	</video>
+	<h2>Your personal travel guide</h2>
+	<h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
+	<p><img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg" alt="camp" /></p>
+	<p><img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" alt="phone" /></p>
+	<h2>Coming Soon for iPhone and Android</h2>
+	<p><a href="" alt="">Download Excursion (Coming soon!)</a></p>
+	<p class="excursion">© Excursion</p>
+
+
 
 </body>
 </html>
